2010-07-07  Agustín Martín  <agustin.martin@hispalinux.es>

	* ispell.el (ispell-alternate-dictionary): Use file-readable-p.
	Return nil if no word-list is found at default locations.
	(ispell-complete-word-dict): Default to nil.
	(ispell-command-loop): Use 'word-list' when using lookup-words.
	(lookup-words): Use ispell-complete-word-dict or
	ispell-alternate-dictionary.  Check for word-list availability
	and handle errors if needed with better messages (Bug#6539).
	(ispell-complete-word): Use ispell-complete-word-dict or
	ispell-alternate-dictionary.

2010-07-07  Glenn Morris  <rgm@gnu.org>

	* play/zone.el (top-level): Do not require timer, tabify, or cl.
	(zone-shift-left): Ignore intangibility, and any errors from
	forward-char.
	(zone-shift-right): Remove no-op end-of-line.  Ignore intangibility.
	(zone-pgm-putz-with-case): Use upcase-region rather than inserting,
	deleting, and copying text properties.
	(zone-line-specs, zone-pgm-stress): Check forward-line exit status.
	(zone-pgm-rotate): Handle odd buffers like that of gomoku, where getting
	to point-max is hard.
	(zone-fret, zone-fill-out-screen): Replace cl's do with dotimes.
	(zone-fill-out-screen): Ignore intangibility.

2010-07-05  Chong Yidong  <cyd@stupidchicken.com>

	* menu-bar.el (menu-bar-mode):
	* tool-bar.el (tool-bar-mode): Replace default-frame-alist element
	if it has been set.

	* mouse.el (mouse-drag-track): Call mouse-start-end to handle
	word/line selection (Bug#6565).

2010-07-04  Juanma Barranquero  <lekktu@gmail.com>

	* net/dbus.el (dbus-send-signal): Declare function.

2010-07-04  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el: Implement signal "PropertiesChanged" (from D-Bus 1.3.1).
	(dbus-register-property): New optional argument EMITS-SIGNAL.
	(dbus-property-handler): Send signal "PropertiesChanged" if requested.

2010-07-03  Chong Yidong  <cyd@stupidchicken.com>

	* mouse.el (mouse-drag-overlay): Variable deleted.